--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,7 @@ dependencies {
 
     //CircularProgressBar
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
+
+    //smartLocation
+    implementation 'io.nlopez.smartlocation:library:3.3.3'
 }
