--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,11 @@ dependencies {
 
     //CircularProgressBar
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
+
+    //Firebase
+    implementation 'com.google.firebase:firebase-firestore:24.4.0'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1"
 }
