--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,10 @@ dependencies {
     //CircularProgressBar
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
 
+    //coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+
     //Firebase
     implementation 'com.google.firebase:firebase-firestore:24.4.0'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
