--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation'com.google.android.material:material:1.7.0'
 
     //Navigation
     implementation "androidx.navigation:navigation-fragment:2.5.2"
